Finished the About page. Added profile photo, removed dead code, and fixed some spacing issues. Next step for this page is adding mixins for mobile view

--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -3,7 +3,7 @@
 // whole page container
 #about {
   background: var(--bg);
-  height: 80vh;
+  height: auto;
   width: 100%;
 }
 
@@ -27,30 +27,14 @@
   line-height: 3rem;
 }
 
-// .about__container h1:nth-child(3) {
-//   top: 2rem;
-// }
-
 .about__profile {
   width: 10rem;
   height: 10rem;
   border-radius: 10rem;
+  margin-bottom: 5rem;
   @include respond-to('mobile') {
     width: 5rem;
     height: 5rem;
-  }
-}
-.about__name {
-  color: var(--primary);
-  font-size: 5rem;
-  font-weight: bold;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  & img {
-    margin-right: 50px;
   }
 }
 
