--- a/src/components/Pages/About/Skills/Skills.scss
+++ b/src/components/Pages/About/Skills/Skills.scss
@@ -5,6 +5,7 @@
   background: var(--primary);
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  margin-bottom: 2rem;
   text-align: center;
   & h4 {
     padding: 2rem;
@@ -19,19 +20,19 @@
   height: auto;
   text-align: left;
   list-style: none;
-  margin: 5rem 0 2.5rem 0;
+  margin: 5rem 0 5rem 0;
   padding-bottom: 2rem;
   box-shadow: 0 0.5rem 1rem #d9d9d9;
   border-radius: 1rem;
   & li {
-    padding: 1rem;
+    padding: 2rem;
   }
 }
 
 .skills__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; 
+  justify-content: space-around;
 }
 
 .skill__icon {
